@@ -21,7 +21,7 @@ public class ResultComparatorTest {
         make(DetectionStatus.TIMED_OUT), make(DetectionStatus.SURVIVED),
         make(DetectionStatus.NO_COVERAGE), make(DetectionStatus.KILLED));
     mrs.sort(this.testee);
-    assertEquals(DetectionStatus.SURVIVED,mrs.get(0).getStatus());
+    assertEquals(DetectionStatus.SURVIVED,mrs.getFirst().getStatus());
     assertEquals(DetectionStatus.NO_COVERAGE,mrs.get(1).getStatus());
     assertEquals(DetectionStatus.TIMED_OUT,mrs.get(2).getStatus());
     assertEquals(DetectionStatus.KILLED,mrs.get(3).getStatus());
